--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="selections">
-    <button class="selection">🍁</button>
-    <button class="selection">✂</button>
-    <button class="selection">🪨</button>
+    <button class="selection" data-selection="paper">🍁</button>
+    <button class="selection" data-selection="scissors">✂</button>
+    <button class="selection" data-selection="rock">🪨</button>
 </div>
 
 <div class="results">
