work on addSelectionResult

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         You 👻
         <span class="result-score">0</span>
     </div>
-    <div>
+    <div data-final-column>
        Zombie 🧟‍♂️
         <span class="result-score">0</span>
     </div>
