function incrementScore(scoreSpan){

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <div class="results">
     <div>
         You 👻
-        <span class="result-score">0</span>
+        <span class="result-score" data-your-score>0</span>
     </div>
     <div data-final-column>
        Zombie 🧟‍♂️
-        <span class="result-score">0</span>
+        <span class="result-score" data-zombie-score>0</span>
     </div>
     
 </div>
